--- a/app/src/main/res/layout/fragment_frg_doi_mk.xml
+++ b/app/src/main/res/layout/fragment_frg_doi_mk.xml
@@ -79,7 +79,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_marginLeft="40dp"
-                android:backgroundTint="#F16134"
+                android:backgroundTint="#705957"
                 android:text="Cancel" />
         </LinearLayout>
     </LinearLayout>
