--- a/app/src/main/res/layout/them_loaisach_layout.xml
+++ b/app/src/main/res/layout/them_loaisach_layout.xml
@@ -56,7 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Cancel"
-            android:backgroundTint="#F16134"
+            android:backgroundTint="#705957"
             android:id="@+id/btnCancel_LS_them"/>
     </LinearLayout>
 </LinearLayout>
