--- a/app/src/main/res/layout/item_phieu_muon.xml
+++ b/app/src/main/res/layout/item_phieu_muon.xml
@@ -16,8 +16,9 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <LinearLayout
-                android:layout_width="310dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight="9"
                 android:orientation="horizontal">
                 <TextView
                     android:layout_width="wrap_content"
@@ -33,9 +34,8 @@
                     android:textSize="15dp" />
             </LinearLayout>
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:text="Chưa trả"
                 android:textColor="#E91E63"
                 android:id="@+id/tvTrangThai_itPm"/>
@@ -105,8 +105,9 @@
             android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="340dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="9"
             android:orientation="horizontal">
             <TextView
                 android:layout_width="wrap_content"
