--- a/app/src/main/res/layout/them_tv_layout.xml
+++ b/app/src/main/res/layout/them_tv_layout.xml
@@ -24,7 +24,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="0"
+            android:text=""
             android:textSize="19dp"
             android:id="@+id/tvMaTV_them"/>
     </LinearLayout>
