--- a/app/src/main/res/layout/update_pm_layout.xml
+++ b/app/src/main/res/layout/update_pm_layout.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_marginVertical="20dp"
         android:gravity="center"
-        android:text="Cập nhật thông tin"
+        android:text="Cập nhật phiếu mượn"
         android:textColor="#0E0E0E"
         android:textSize="30dp"
         android:textStyle="bold" />
@@ -49,7 +49,7 @@
         <Spinner
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingVertical="5dp"
+            android:paddingVertical="6dp"
             android:id="@+id/sp_TenTv_Pm_up"/>
     </LinearLayout>
     <LinearLayout
@@ -68,7 +68,7 @@
         <Spinner
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingVertical="5dp"
+            android:paddingVertical="6dp"
             android:id="@+id/sp_TenS_Pm_up"/>
     </LinearLayout>
     <LinearLayout
