--- a/app/src/main/res/layout/item_phieu_muon.xml
+++ b/app/src/main/res/layout/item_phieu_muon.xml
@@ -40,7 +40,25 @@
                 android:textColor="#E91E63"
                 android:id="@+id/tvTrangThai_itPm"/>
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Thủ thư : "
+                android:textSize="17dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tvThuThu_itPm"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=" a "
+                android:textSize="15dp" />
+        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
