--- a/app/src/main/res/layout/fragment_frg_doanh_thu.xml
+++ b/app/src/main/res/layout/fragment_frg_doanh_thu.xml
@@ -7,18 +7,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:layout_marginHorizontal="10dp"
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="10dp"
+            android:layout_marginBottom="30dp"
             android:orientation="horizontal">
             <Button
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
-                android:backgroundTint="#F16134"
+                android:backgroundTint="#6C233C"
                 android:text="Từ ngày"
                 android:id="@+id/btnDayStart"/>
             <EditText
@@ -28,7 +28,7 @@
                 android:gravity="center"
                 android:layout_gravity="center"
                 android:padding="5dp"
-                android:text="0/0/0"
+                android:text=""
                 android:textSize="20dp"
                 android:layout_marginLeft="10dp"
                 android:id="@+id/edDayStart"/>
@@ -36,12 +36,12 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="10dp"
+            android:layout_marginBottom="30dp"
             android:orientation="horizontal">
             <Button
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
-                android:backgroundTint="#F16134"
+                android:backgroundTint="#6C233C"
                 android:text="Đến ngày"
                 android:id="@+id/btnDayTo"/>
             <EditText
@@ -49,7 +49,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/khung"
                 android:layout_gravity="center"
-                android:text="0/0/0"
+                android:text=""
                 android:gravity="center"
                 android:textSize="20dp"
                 android:layout_marginLeft="10dp"
@@ -59,11 +59,12 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="10dp"
+            android:layout_marginBottom="20dp"
             android:drawableRight="@drawable/ic_money"
             android:textColor="#000"
             android:backgroundTint="#4CAF50"
             android:text="Xem doanh thu"
+            android:layout_gravity="left"
             android:textStyle="bold"
             android:textSize="17dp"
             android:id="@+id/btnXemDoanhThu"/>
@@ -73,7 +74,7 @@
             android:layout_marginVertical="10dp"
             android:background="@drawable/khung"
             android:minHeight="40dp"
-            android:text="0 VND"
+            android:text=""
             android:textSize="20dp"
             android:gravity="center"
             android:id="@+id/tvDoanhThu"/>
