--- a/app/src/main/res/layout/fragment_frg_doi_mk.xml
+++ b/app/src/main/res/layout/fragment_frg_doi_mk.xml
@@ -71,7 +71,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_marginRight="40dp"
-                android:backgroundTint="#4CAF50"
+                android:backgroundTint="#82B843"
                 android:text="Save"/>
             <Button
                 android:id="@+id/btnCancelUserChange"
