--- a/app/src/main/res/layout/fragment_frg_doanh_thu.xml
+++ b/app/src/main/res/layout/fragment_frg_doanh_thu.xml
@@ -18,7 +18,7 @@
             <Button
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
-                android:backgroundTint="#6C233C"
+                android:backgroundTint="#705957"
                 android:text="Từ ngày"
                 android:id="@+id/btnDayStart"/>
             <EditText
@@ -41,7 +41,7 @@
             <Button
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
-                android:backgroundTint="#6C233C"
+                android:backgroundTint="#705957"
                 android:text="Đến ngày"
                 android:id="@+id/btnDayTo"/>
             <EditText
@@ -62,7 +62,7 @@
             android:layout_marginBottom="20dp"
             android:drawableRight="@drawable/ic_money"
             android:textColor="#000"
-            android:backgroundTint="#4CAF50"
+            android:backgroundTint="#82B843"
             android:text="Xem doanh thu"
             android:layout_gravity="left"
             android:textStyle="bold"
