--- a/app/src/main/res/layout/fragment_frg_q_ly_loai_sach.xml
+++ b/app/src/main/res/layout/fragment_frg_q_ly_loai_sach.xml
@@ -22,7 +22,7 @@
         android:layout_gravity="bottom|end"
         android:layout_marginRight="15dp"
         android:layout_marginBottom="15dp"
-        android:backgroundTint="#8BC34A"
+        android:backgroundTint="#82B843"
         android:src="@drawable/ic_add"
         tools:ignore="SpeakableTextPresentCheck" />
 
