--- a/app/src/main/res/layout/fragment_frg_q_ly_thanh_vien.xml
+++ b/app/src/main/res/layout/fragment_frg_q_ly_thanh_vien.xml
@@ -20,6 +20,6 @@
         android:layout_gravity="bottom|end"
         android:layout_marginBottom="15dp"
         android:layout_marginRight="15dp"
-        android:backgroundTint="#8BC34A"
+        android:backgroundTint="#82B843"
         android:id="@+id/fabAdd_Tv"/>
 </FrameLayout>
