--- a/app/src/main/res/layout/them_pm_layout.xml
+++ b/app/src/main/res/layout/them_pm_layout.xml
@@ -143,7 +143,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="100dp"
             android:text="Save"
-            android:backgroundTint="#4CAF50"
+            android:backgroundTint="#82B843"
             android:id="@+id/btnSave_Pm_them"/>
         <Button
             android:layout_width="wrap_content"
