--- a/app/src/main/res/layout/them_tv_layout.xml
+++ b/app/src/main/res/layout/them_tv_layout.xml
@@ -58,6 +58,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:layout_marginRight="100dp"
             android:text="Save"
             android:backgroundTint="#82B843"
@@ -65,6 +66,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="Cancel"
             android:backgroundTint="#705957"
             android:id="@+id/btnCancel_TV_them"/>
