--- a/app/src/main/res/layout/update_sach_layout.xml
+++ b/app/src/main/res/layout/update_sach_layout.xml
@@ -77,6 +77,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:layout_marginRight="100dp"
             android:text="Update"
             android:backgroundTint="#82B843"
@@ -84,6 +85,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="Cancel"
             android:backgroundTint="#705957"
             android:id="@+id/btnCancel_S_up"/>
